@@ -11,7 +11,6 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -20,15 +19,17 @@ import java.util.List;
 
 /**
  * Serviço de integração com a API do Last.fm.
- * Responsável por buscar álbuns e suas faixas.
- * Exceções são lançadas aqui (camada service) e tratadas na view.
+ * Responsável por buscar álbuns, faixas individuais (singles) e suas faixas.
+ * Exceções são lançadas aqui (camada controller) e tratadas na view.
  */
 public class LastFmService {
 
     private static final String API_KEY  = "93bd1c2545d911220f27047b8ffaa5a8";
     private static final String BASE_URL = "http://ws.audioscrobbler.com/2.0/";
 
-    // ── Busca álbuns pelo nome (retorna lista de candidatos) ────────────
+    // =====================================================================
+    //  BUSCA DE ÁLBUNS (Álbum de Estúdio, EP, Álbum ao Vivo)
+    // =====================================================================
     public List<ResultadoBusca> buscarAlbum(String termo)
             throws ArquivoNaoEncontradoException, IOException, DadosInvalidosException {
 
@@ -65,7 +66,7 @@ public class LastFmService {
         return resultados;
     }
 
-    // ── Importa álbum completo com faixas para um objeto Musica ─────────
+    /** Importa álbum completo (com tracklist) para um objeto Musica. */
     public void importarAlbumCompleto(Musica musica, String nomeAlbum, String nomeArtista)
             throws ArquivoNaoEncontradoException, IOException {
 
@@ -83,19 +84,16 @@ public class LastFmService {
 
         JSONObject album = json.getJSONObject("album");
 
-        // Preenche os dados básicos
         musica.setNome(album.optString("name", nomeAlbum));
         musica.setArtista(album.optString("artist", nomeArtista));
         musica.setUrlCapa(extrairMelhorCapa(album.optJSONArray("image")));
 
-        // Tags → gênero (pega a primeira)
         try {
             JSONArray tags = album.getJSONObject("tags").getJSONArray("tag");
             if (tags.length() > 0)
                 musica.setGenero(tags.getJSONObject(0).optString("name", ""));
         } catch (Exception ignored) {}
 
-        // Wiki → ano (tenta extrair do texto de publicação)
         try {
             String published = album.getJSONObject("wiki").optString("published", "");
             if (!published.isEmpty()) {
@@ -104,17 +102,15 @@ public class LastFmService {
             }
         } catch (Exception ignored) {}
 
-        // Faixas
         try {
             JSONArray tracks = album.getJSONObject("tracks").getJSONArray("track");
             for (int i = 0; i < tracks.length(); i++) {
                 JSONObject t = tracks.getJSONObject(i);
-                int numero   = t.optInt("@attr.rank", i + 1);
-                // rank pode estar em atributos
+                int numero;
                 try { numero = t.getJSONObject("@attr").optInt("rank", i + 1); }
                 catch (Exception ig) { numero = i + 1; }
-                String titulo   = t.optString("name", "Faixa " + (i + 1));
-                int duracao     = t.optInt("duration", 0);
+                String titulo = t.optString("name", "Faixa " + (i + 1));
+                int duracao   = t.optInt("duration", 0);
                 musica.addFaixa(new Faixa(numero, titulo, duracao));
             }
         } catch (Exception ignored) {}
@@ -122,9 +118,101 @@ public class LastFmService {
         musica.importarDados("last.fm");
     }
 
+    // =====================================================================
+    //  BUSCA DE FAIXA INDIVIDUAL (para o tipo Single)
+    //  Usa track.search — busca por uma música específica, não um álbum.
+    // =====================================================================
+    public List<ResultadoBuscaFaixa> buscarFaixa(String termo)
+            throws ArquivoNaoEncontradoException, IOException, DadosInvalidosException {
+
+        if (termo == null || termo.trim().isEmpty())
+            throw new DadosInvalidosException("O termo de busca não pode ser vazio.");
+
+        String encoded = URLEncoder.encode(termo.trim(), StandardCharsets.UTF_8);
+        String url = BASE_URL + "?method=track.search&track=" + encoded
+                   + "&api_key=" + API_KEY + "&format=json&limit=8";
+
+        String resposta = fazerRequisicao(url);
+        JSONObject json = new JSONObject(resposta);
+
+        JSONArray matches;
+        try {
+            matches = json.getJSONObject("results")
+                          .getJSONObject("trackmatches")
+                          .getJSONArray("track");
+        } catch (Exception e) {
+            throw new ArquivoNaoEncontradoException("Nenhuma faixa encontrada para: " + termo);
+        }
+
+        if (matches.length() == 0)
+            throw new ArquivoNaoEncontradoException("Nenhuma faixa encontrada para: " + termo);
+
+        List<ResultadoBuscaFaixa> resultados = new ArrayList<>();
+        for (int i = 0; i < matches.length(); i++) {
+            JSONObject item = matches.getJSONObject(i);
+            String nomeFaixa  = item.optString("name", "");
+            String nomeArtist = item.optString("artist", "");
+            String capa       = extrairMelhorCapa(item.optJSONArray("image"));
+            resultados.add(new ResultadoBuscaFaixa(nomeFaixa, nomeArtist, capa));
+        }
+        return resultados;
+    }
+
+    /** Importa uma faixa individual (Single) usando track.getInfo.
+     *  Diferente de importarAlbumCompleto: aqui a "obra" é a própria faixa,
+     *  então ela é adicionada como única entrada na tracklist do Single. */
+    public void importarFaixaIndividual(Musica musica, String nomeFaixa, String nomeArtista)
+            throws ArquivoNaoEncontradoException, IOException {
+
+        String encFaixa   = URLEncoder.encode(nomeFaixa.trim(),   StandardCharsets.UTF_8);
+        String encArtista = URLEncoder.encode(nomeArtista.trim(), StandardCharsets.UTF_8);
+        String url = BASE_URL + "?method=track.getinfo&track=" + encFaixa
+                   + "&artist=" + encArtista
+                   + "&api_key=" + API_KEY + "&format=json";
+
+        String resposta = fazerRequisicao(url);
+        JSONObject json = new JSONObject(resposta);
+
+        if (json.has("error"))
+            throw new ArquivoNaoEncontradoException("Faixa não encontrada na base Last.fm.");
+
+        JSONObject track = json.getJSONObject("track");
+
+        musica.setNome(track.optString("name", nomeFaixa));
+        musica.setArtista(track.optJSONObject("artist") != null
+            ? track.getJSONObject("artist").optString("name", nomeArtista)
+            : nomeArtista);
+
+        // Capa do álbum ao qual a faixa pertence (se disponível)
+        JSONObject albumInfo = track.optJSONObject("album");
+        if (albumInfo != null) {
+            musica.setUrlCapa(extrairMelhorCapa(albumInfo.optJSONArray("image")));
+        }
+
+        // Duração da própria faixa (em milissegundos na API, convertendo para segundos)
+        int duracaoMs = track.optInt("duration", 0);
+        int duracaoSeg = duracaoMs > 0 ? duracaoMs / 1000 : 0;
+
+        // Gênero via tags
+        try {
+            JSONArray tags = track.getJSONObject("toptags").getJSONArray("tag");
+            if (tags.length() > 0)
+                musica.setGenero(tags.getJSONObject(0).optString("name", ""));
+        } catch (Exception ignored) {}
+
+        // A própria faixa é a única "faixa" desse Single
+        musica.addFaixa(new Faixa(1, musica.getNome(), duracaoSeg));
+
+        musica.setUrlLink("https://www.last.fm/music/"
+            + URLEncoder.encode(musica.getArtista(), StandardCharsets.UTF_8) + "/_/"
+            + URLEncoder.encode(musica.getNome(), StandardCharsets.UTF_8));
+
+        musica.importarDados("last.fm");
+    }
+
     // ── Requisição HTTP simples ─────────────────────────────────────────
     private String fazerRequisicao(String urlStr) throws IOException {
-        URL url = URI.create(urlStr).toURL();
+        URL url = new URL(urlStr);
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setRequestMethod("GET");
         conn.setConnectTimeout(8000);
@@ -146,7 +234,6 @@ public class LastFmService {
     // ── Escolhe a maior imagem disponível no array de capas ─────────────
     private String extrairMelhorCapa(JSONArray images) {
         if (images == null) return "";
-        // Last.fm retorna: small, medium, large, extralarge, mega
         String[] prioridade = {"mega", "extralarge", "large", "medium", "small"};
         for (String tamanho : prioridade) {
             for (int i = 0; i < images.length(); i++) {
@@ -160,13 +247,29 @@ public class LastFmService {
         return "";
     }
 
-    // ── Classe interna: resultado simplificado da busca ─────────────────
+    // ── Classe interna: resultado simplificado da busca de álbum ────────
     public static class ResultadoBusca {
         public final String nome;
         public final String artista;
         public final String urlCapa;
 
         public ResultadoBusca(String nome, String artista, String urlCapa) {
+            this.nome    = nome;
+            this.artista = artista;
+            this.urlCapa = urlCapa;
+        }
+
+        @Override
+        public String toString() { return nome + " — " + artista; }
+    }
+
+    // ── Classe interna: resultado simplificado da busca de faixa ────────
+    public static class ResultadoBuscaFaixa {
+        public final String nome;
+        public final String artista;
+        public final String urlCapa;
+
+        public ResultadoBuscaFaixa(String nome, String artista, String urlCapa) {
             this.nome    = nome;
             this.artista = artista;
             this.urlCapa = urlCapa;
